adding logs to category service